<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginMedium"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/favoriteButtonSize"
                    android:layout_height="@dimen/favoriteButtonSize"
                    android:src="@drawable/ic_gamepad"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginMedium"
                    android:text="@string/login_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/favoriteButtonSize"
                    android:layout_height="@dimen/favoriteButtonSize"
                    android:src="@drawable/ic_videogame"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginMedium"
                android:text="@string/login_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/login_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginMedium"
                android:hint="@string/login_username_hint"
                android:lines="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginMedium"
                android:text="@string/login_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/login_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginMedium"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginMedium"
                android:background="@color/colorPrimary"
                android:text="@string/login_login_button" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/login_loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</FrameLayout>